--- a/samah_assignment3/samah_sidebar.html
+++ b/samah_assignment3/samah_sidebar.html
@@ -30,7 +30,10 @@
         <div>
             <a href="samah_videos.html" target="frameContent"><strong>My Vedios</strong></a>
         </div>
-
+        <hr>
+        <div>
+            <a href="samah_flower_maps.html" target="frameContent"><strong>Flower Info Map</strong></a>
+        </div>
     </aside>
 </body>
 
