--- a/html_projects_without_css/samah_assignment1/top_down_navigation.html
+++ b/html_projects_without_css/samah_assignment1/top_down_navigation.html
@@ -28,7 +28,7 @@
         </center>
         <div dir="rtl">
             <a href="#footer">
-                <img src="down-icon.png" width="40px" height="40px">
+                <img src="images/down-icon.png" width="40px" height="40px">
             </a>
         </div>
     </nav>
@@ -52,7 +52,7 @@
     <footer id="footer">
         <div dir="rtl">
             <a href="#top">
-                <img src="top.png" width="40px" height="40px">
+                <img src="images/top.png" width="40px" height="40px">
             </a>
         </div>
         <center>
