--- a/html_projects_without_css/samah_assignment2/homepage_using_table.html
+++ b/html_projects_without_css/samah_assignment2/homepage_using_table.html
@@ -21,7 +21,7 @@
                 <a href="#">Home</a>
             </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span>
-                <a href="./samah_about.html#about-us">
+                <a href="./about.html#about-us">
                     About us
                 </a>
             </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
