--- a/html_projects_without_css/samah_assignment3/header.html
+++ b/html_projects_without_css/samah_assignment3/header.html
@@ -18,18 +18,18 @@
             <table height="100%" width="100%">
                 <tr>
                     <td valign="middle" width="250px">
-                        <a href="samah_content.html" target="frameContent">
+                        <a href="content.html" target="frameContent">
                             <img src="images/rb_32575.png" width="150" height="100" alt="Logo">
                         </a>
                     </td>
                     <td valign="middle">
-                        <a href="samah_content.html" target="frameContent"><strong>Home</strong></a>
+                        <a href="content.html" target="frameContent"><strong>Home</strong></a>
                         &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                        <a href="samah_service.html" target="frameContent"><strong>Service</strong></a>
+                        <a href="service.html" target="frameContent"><strong>Service</strong></a>
                         &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                        <a href="samah_about.html" target="frameContent"><strong>About</strong></a>
+                        <a href="about.html" target="frameContent"><strong>About</strong></a>
                         &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;
-                        <a href="samah_contacts.html" target="frameContent"><strong>Contact us</strong></a>
+                        <a href="contacts.html" target="frameContent"><strong>Contact us</strong></a>
                     </td>
                 </tr>
             </table>
