--- a/html_projects_without_css/samah_assignment3/sidebar.html
+++ b/html_projects_without_css/samah_assignment3/sidebar.html
@@ -19,20 +19,20 @@
     <aside>
 
         <div>
-            <a href="samah_products.html" target="frameContent"><strong>Products</strong></a>
+            <a href="products.html" target="frameContent"><strong>Products</strong></a>
         </div>
         <hr width="100%">
         <div>
-            <a href="./samah_assignment1/samah_top_down_navigation.html"
+            <a href="./samah_assignment1/top_down_navigation.html"
                 target="frameContent"><strong>Task1</strong></a>
         </div>
         <hr>
         <div>
-            <a href="samah_videos.html" target="frameContent"><strong>My Vedios</strong></a>
+            <a href="videos.html" target="frameContent"><strong>My Vedios</strong></a>
         </div>
         <hr>
         <div>
-            <a href="samah_flower_maps.html" target="frameContent"><strong>Flower Info Map</strong></a>
+            <a href="flower_maps.html" target="frameContent"><strong>Flower Info Map</strong></a>
         </div>
     </aside>
 </body>
