add readme files

--- a/html_projects_without_css/samah_assignment1/top_down_navigation.html
+++ b/html_projects_without_css/samah_assignment1/top_down_navigation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samah Top Down Navigtion</title>
+    <title>Top Down Navigtion</title>
     <style>
         html {
           scroll-behavior: smooth;
