--- a/html_projects_with_css/samah_assignment11/index.html
+++ b/html_projects_with_css/samah_assignment11/index.html
@@ -12,7 +12,7 @@
             <img src="https://i.pinimg.com/736x/fc/90/a7/fc90a70c6abd68dd5d0954bcf7cff7df.jpg" alt="">
         </div>
         <div class="content">
-            <span><strong>Hi I am Cat</strong></span>
+            <span><strong>Hi I am Dog</strong></span>
         </div>
     </div>
     <div class="container-turtle txt-shadow">
