change cat image

--- a/html_projects_with_css/samah_assignment11/index.html
+++ b/html_projects_with_css/samah_assignment11/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="container-cat txt-shadow">
         <div class="d-img">
-            <img src="https://c4.wallpaperflare.com/wallpaper/786/376/944/cat-cat-eyes-jeans-cute-cat-wallpaper-preview.jpg" alt="">
+            <img src="https://i.ytimg.com/vi/SQJrYw1QvSQ/maxresdefault.jpg" alt="">
         </div>
         <div class="content">
             <span><strong>Hi I am Cat</strong></span>
