--- a/html_with_js/samah_assignement23_simple_add/index.html
+++ b/html_with_js/samah_assignement23_simple_add/index.html
@@ -54,7 +54,7 @@
     <footer
         class="position-absolute bottom-0 w-100 bg-body-tertiary py-3 d-flex flex-column justify-content-center align-items-center text-center">
         <div class="">
-            <small class="mb-2">&copy; 2025 - Area Calculator. Samah Ali - All rights reserved.</small>
+            <small class="mb-2">&copy; 2025 - Simple Addition. Samah Ali - All rights reserved.</small>
             <div class="social-icons">
                 <a href="#" class="social-icon mx-2 text-body"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="social-icon mx-2 text-body"><i class="fab fa-twitter"></i></a>
