--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LinkedIn Login, Sign in | LinkedIn</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Sign in to LinkedIn to stay connected and up to date with your professional network. Access job opportunities, industry news, and career insights.">
+    <meta name="keywords" content="LinkedIn, Sign in, Login, Professional Network, Jobs, Career, Business Connections">
+    <meta name="author" content="Samah Ali">
+    <meta name="robots" content="index, follow">
+
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -42,18 +49,25 @@
                     <div class="col d-flex justify-content-center">
                         <form action="?" method="post">
                             <div class="row mb-4">
-                                <div class="col d-flex justify-content-center">
-                                    <input type="text" placeholder="Email or phone" name="username" id="username"
-                                        class="form-control form-control-lg" aria-label="Email or Phone">
+                                <div class="col">
+                                    <div class="w-100 d-flex justify-content-center form-floating" >
+                                        <input type="text" class="ps-3 form-control form-control-lg fs-4"
+                                         placeholder="Email or phone" name="username"
+                                            id="username" aria-label="Email or Phone">
+                                        <label for="username ps-3">Email or phone</label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col d-flex justify-content-center position-relative">
-                                    <input type="password" placeholder="Password" name="password" id="password"
-                                        class="form-control form-control-lg" aria-label="password">
-                                        <span id="password-visibility-toggle" class="position-absolute fs-0-875 fw-bold show-span" role="button" tabindex="0">
-                                            Show
-                                            </span>
+                                <div class="col position-relative">
+                                    <div class="w-100 d-flex justify-content-center form-floating" >
+                                        <input type="password" class="ps-3 form-control form-control-lg fs-4" placeholder="Password" name="password"
+                                            id="password" aria-label="password">
+                                        <label for="password ps-3">Password</label>
+                                    </div>
+                                    <span id="password-visibility-toggle" class="position-absolute fs-0-875 fw-bold show-span" role="button" tabindex="0">
+                                        Show
+                                    </span>
                                 </div>
                             </div>
                             <div class="row my-2">
