--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkedIn Login, Sign in | LinkedIn</title>
+    <title>Mocked LinkedIn Login, Sign in | LinkedIn</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Sign in to LinkedIn to stay connected and up to date with your professional network. Access job opportunities, industry news, and career insights.">
-    <meta name="keywords" content="LinkedIn, Sign in, Login, Professional Network, Jobs, Career, Business Connections">
+    <meta name="description" content="Mocked Sign in to LinkedIn to stay connected and up to date with your professional network. Access job opportunities, industry news, and career insights.">
+    <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login, Professional Network, Jobs, Career, Business Connections">
     <meta name="author" content="Samah Ali">
     <meta name="robots" content="index, follow">
 
