edit commit in content of meta

--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -7,8 +7,8 @@
     <title>Mocked LinkedIn Login, Sign in | LinkedIn</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Mocked Sign in to LinkedIn to stay connected and up to date with your professional network. Access job opportunities, industry news, and career insights.">
-    <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login, Professional Network, Jobs, Career, Business Connections">
+    <meta name="description" content="Mocked Sign in to LinkedIn.">
+    <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login">
     <meta name="author" content="Samah Ali">
     <meta name="robots" content="index, follow">
 
