remove meta change title

--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mocked LinkedIn Login, Sign in | LinkedIn</title>
+    <title>Mocked LinkedIn</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Mocked Sign in to LinkedIn.">
     <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login">
     <meta name="author" content="Samah Ali">
-    <meta name="robots" content="index, follow">
+    <!-- <meta name="robots" content="index, follow"> -->
 
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
