--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mocked LinkedIn</title>
+    <title>Mocked LinkedIn By Samah</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Mocked Sign in to LinkedIn.">
-    <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login">
+    <!-- <meta name="description" content="Mocked Sign in to LinkedIn.">
+    <meta name="keywords" content="Mocked, LinkedIn, Sign in, Login"> -->
     <meta name="author" content="Samah Ali">
     <!-- <meta name="robots" content="index, follow"> -->
 
