change title name

--- a/html_projects_with_bootstrap5/samah_assignment17/index.html
+++ b/html_projects_with_bootstrap5/samah_assignment17/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mocked LinkedIn By Samah</title>
+    <title>Mocked By Samah</title>
 
     <!-- SEO Meta Tags -->
     <!-- <meta name="description" content="Mocked Sign in to LinkedIn.">
