--- a/html_with_js/samah_assignment30_menu/index.html
+++ b/html_with_js/samah_assignment30_menu/index.html
@@ -37,13 +37,13 @@
                         <li class="nav-item"><a class="nav-link" href="#contactus">Contact us</a></li>
                     </ul>
                     <!-- Cart Button Inside the Collapse -->
-                    <form class="d-flex mt-3 mt-sm-0">
+                    <div class="d-flex mt-3 mt-sm-0">
                         <button class="btn btn-outline-warning" onclick="openCartModal();">
                             <i class="fa-solid fa-cart-plus me-1"></i>
                             Cart
                             <span class="badge bg-dark text-warning ms-1 rounded-pill" id="cart">0</span>
                         </button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </nav>     
