--- a/reactjs/bookstore/index.html
+++ b/reactjs/bookstore/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      (function () {
+        // Retrieve the saved theme from localStorage, or default to 'dark' if not found
+        const savedTheme = localStorage.getItem("bookstore-theme") || "dark";
+        
+        if (savedTheme === "dark") {
+          // If it is dark, add the 'dark-theme' class to the body element
+          document.body.classList.add("dark-theme");
+        }
+      })();
+    </script>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
